--- a/src/Components/Css/Todo.css
+++ b/src/Components/Css/Todo.css
@@ -1,6 +1,5 @@
 .todo {
-    width: 600px;
-    min-height: 300px;
+    max-width: 600px;
     border-radius: 20px;
     background: #fff;
     margin: auto;
@@ -13,7 +12,7 @@
 }
 
 .todo-header {
-    margin-top: 84px;
+    margin-top: 50px;
     color: #002765;
     font-size: 36px;
     font-weight: 600;
